# TinyRendererView

./: README.md  TinyRendererView.sln
TinyRenderer/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  TinyRenderer.sln  TinyRenderer.vcxproj  TinyRenderer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buffer.cpp  buffer.h  cmake_install.cmake  color.h  face.h  geometry.cpp  geometry.h  lib.cpp  lib.h  matrix.h  model.cpp  model.h  render.cpp  render.h  texture.cpp  texture.h  transform.h
TinyRendererView/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TinyRendererView.csproj
TinyRendererView/Models/: RGBBuffer.cs  TinyRendererWrapper.cs  Vector3.cs
TinyRendererView/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
TinyRendererView/Utilities/: ImageFactory.cs
TinyRendererView/Views/: MainWindow.xaml  MainWindow.xaml.cs
